# ESGIprojetC

./: .gitignore  CMakeLists.txt  README.md  clientSrc.c
headers/: config.h  database.h  feed.h  jsonParse.h  login.h  macros.h  terminal.h  window.h  ytapi.h
sources/: config.c  configTypes.c  database.c  databaseTypes.c  feed.c  jsonParse.c  login.c  sessionType.c  terminal.c  window.c  ytapi.c
types/: databaseTypes.c  sessionType.c
